--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "element-ui": "^2.12.0",
+    "sass": "^1.52.2",
+    "vue-lazyload": "^1.3.2",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -24,7 +29,7 @@
     "babel-jest": "^27.0.6",
     "jest": "^27.0.5",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
+    "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
